--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,117 +4,8 @@ x-zoo: &zoo "kafka-1:2888:3888;kafka-2:2888:3888;kafka-3:2888:3888"
 x-kafkaZookeepers: &kafkaZookeepers "kafka-1:2181,kafka-2:2181,kafka-3:2181"
 x-kafkaBrokers: &kafkaBrokers "kafka-1:9092"
 
-
 services:
-
-
     # Brokers
-    # zookeeper:
-    #     image: zookeeper:3.4.9
-    #     hostname: zookeeper
-    #     ports:
-    #     - "2181:2181"
-    #     environment:
-    #         ZOO_MY_ID: 1
-    #         ZOO_PORT: 2181
-    #         ZOO_SERVERS: server.1=zookeeper:2888:3888
-    #     volumes:
-    #         - ./data/zookeeper/data:/data
-    #         - ./data/zookeeper/datalog:/datalog
-    #     healthcheck:
-    #         test: ["CMD-SHELL", "echo ruok | nc -w 2 zookeeper 4444"]
-    #         interval: 5s
-    #         timeout: 10s
-    #         retries: 3
-    #     networks: 
-    #         - database_network
-    # zookeeper:
-    #     image: confluentinc/cp-zookeeper:6.2.1
-    #     container_name: zookeeper
-    #     ports:
-    #         - "2181:2181"
-    #     extra_hosts:
-    #         - "kafka1:192.168.1.11"
-    #     environment:
-    #         ZOOKEEPER_SERVER_ID: 1
-    #         ZOOKEEPER_QUORUM_LISTEN_ON_ALL_IPS: 'true'
-    #         ZOOKEEPER_CLIENT_PORT: 2181
-    #         ZOOKEEPER_PEER_PORT: 2888
-    #         ZOOKEEPER_LEADER_PORT: 3888
-    #         ZOOKEEPER_TICK_TIME: 2000
-    #         ZOOKEEPER_INIT_LIMIT: 5
-    #         ZOOKEEPER_SYNC_LIMIT: 2
-    #         ZOOKEEPER_SERVERS: server.1=zookeeper:2888:3888
-    #     volumes:
-    #         - ./kafka-data/zookeeper:/var/lib/zookeeper/data
-    #         - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
-    #     healthcheck:
-    #         test: ["CMD-SHELL", "echo ruok | nc -w 2 zookeeper 2181"]
-    #         interval: 5s
-    #         timeout: 10s
-    #         retries: 3
-    #     networks:
-    #         - mynet
-    
-    # kafka1:
-    #     image: confluentinc/cp-kafka:6.2.1
-    #     hostname: kafka1
-    #     container_name: kafka1
-    #     depends_on:
-    #         zookeeper:
-    #             condition: service_healthy
-    #     ports:
-    #         - "9092:9092"
-    #     extra_hosts:
-    #         - "kafka1:192.168.1.11"
-    #     environment:
-    #         KAFKA_BROKER_ID: 1
-    #         KAFKA_LISTENERS: OUTSIDE://0.0.0.0:9092
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: OUTSIDE:PLAINTEXT
-    #         KAFKA_ADVERTISED_LISTENERS: OUTSIDE://192.168.1.11:9092
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: OUTSIDE
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #         KAFKA_LOG_MESSAGE_TIMESTAMP_TYPE: 'LogAppendTime'
-    #         KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-    #         KAFKA_CONNECTIONS_MAX_IDLE_MS: 31536000000 # 1 year
-    #     volumes:
-    #         - ./kafka-data/kafka:/var/lib/kafka/data
-
-    #     networks:
-    #         - mynet
-    # zookeeper:
-    #     container_name: zookeeper
-    #     image: confluentinc/cp-zookeeper:6.2.1
-    #     hostname: zookeeper
-    #     restart: always
-    #     environment:
-    #         ZOOKEEPER_SERVER_ID: 1
-    #         ZOOKEEPER_CLIENT_PORT: 2181
-    #         ZOOKEEPER_TICK_TIME: 2000
-    #         ZOOKEEPER_INIT_LIMIT: 5
-    #         ZOOKEEPER_SYNC_LIMIT: 2
-    #     ports:
-    #         - 2181:2181
-
-    # kafka:
-    #     container_name: kafka
-    #     image: confluentinc/cp-kafka:6.2.1
-    #     depends_on:
-    #         - zookeeper
-    #     restart: always
-    #     environment:
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-    #         KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://localhost:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #         KAFKA_LISTENERS: LISTENER_DOCKER_INTERNAL://:19092,LISTENER_DOCKER_EXTERNAL://kafka1:9092
-    #         KAFKA_BROKER_ID: 1
-
-
-    #     ports:
-    #         - 9092:9092
     zookeeper:
         image: confluentinc/cp-zookeeper:7.2.6
         restart: always
@@ -153,103 +44,9 @@ services:
         ports:
             - "9000:9000"
         environment:
-            KAFKA_BROKERCONNECT: "kafka:29092"
+            KAFKA_BROKERCONNECT: "kafka:9092"
         networks:
             - mynet
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    # kafka1:
-    #     image: confluentinc/cp-kafka:6.0.14
-    #     # image: wurstmeister/kafka
-    #     # image: confluentinc/cp-kafka:5.3.0
-    #     # docker pull confluentinc/cp-kafka
-    #     hostname: kafka1
-        
-    #     ports:
-    #         - "9092:9092"
-    #     environment:
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-    #         KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #         KAFKA_LISTENERS: LISTENER_DOCKER_INTERNAL
-    #         KAFKA_BROKER_ID: 1
-    #         KAFKA_ADVERTISED_HOST_NAME: localhost
-    #     volumes:
-    #         - ./data/kafka1/data:/var/lib/kafka/data
-    #     depends_on:
-    #         - zookeeper
-                # condition: service_healthy
-        # healthcheck:
-            # test: nc -z localhost 9092 || exit -1
-            # start_period: 15s
-            # interval: 5s
-            # timeout: 10s
-            # retries: 10
-
-
-
-
-
-
-
-
-
-    # zookeeper:
-    #     image: confluentinc/cp-zookeeper:latest
-    #     environment:
-    #         ZOOKEEPER_CLIENT_PORT: 2181
-    #         ZOOKEEPER_TICK_TIME: 2000
-    #     ports:
-    #         - 22181:2181
-    
-    # kafka:
-    #     image: confluentinc/cp-kafka:latest
-    #     depends_on:
-    #         - zookeeper
-    #     ports:
-    #         - 29092:29092
-    #     environment:
-    #         KAFKA_BROKER_ID: 1
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
-
-
-
-
-
-
-
-
-
-    
-
-        # depends_on:
-        #     kafka1:
-        #         condition: service_healthy
 
 
     # backends
@@ -270,6 +67,7 @@ services:
             KAFKA_BROKERCONNECT: "kafka:9092"
         networks:
             - mynet
+            - database_network
         # depends_on:
         #     kafka1:
         #         condition: service_healthy
@@ -289,29 +87,28 @@ services:
             KAFKA_BROKERCONNECT: "kafka:9092"
 
 
-
     # Databases
-    # database_analytics:
-    #     build:
-    #         dockerfile: ./ecommerce/database_analytics/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5432:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_analytics:/var/lib/database_analytics/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
+    database_analytics:
+        build:
+            dockerfile: ./ecommerce/database_analytics/Dockerfile
+        restart: always
+        ports:
+            - '5432:${POSTGRES_PORT}'
+        networks:
+            - database_network
+        env_file:
+            - .env
+        volumes:
+            - ./data/database_analytics:/var/lib/database_analytics/data
+        environment:
+            POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+            POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+            POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+        healthcheck:
+            test: [“CMD-SHELL”, “pg_isready”]
+            interval: 1s
+            timeout: 5s
+            retries: 10
     
     # database_users:
     #     build:
@@ -403,20 +200,20 @@ services:
 
     
     # # Database administrator
-    # pgadmin:
-    #     image: dpage/pgadmin4
-    #     environment:
-    #         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-    #         PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    #         PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-    #         PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
-    #     ports:
-    #         - "5050:${PGADMIN_LISTEN_PORT}"
-    #     volumes:
-    #         - ./data/pgadmin4:/var/lib/pgadmin4/data
-    #     networks:
-    #         - database_network
-    #     restart: unless-stopped
+    pgadmin:
+        image: dpage/pgadmin4
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+            PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+            PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+        ports:
+            - "5050:${PGADMIN_LISTEN_PORT}"
+        volumes:
+            - ./data/pgadmin4:/var/lib/pgadmin4/data
+        networks:
+            - database_network
+        restart: unless-stopped
 
     
 networks:
