--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,59 +6,60 @@ x-kafkaBrokers: &kafkaBrokers "kafka-1:9092"
 
 services:
     # Brokers
-    zookeeper:
-        image: confluentinc/cp-zookeeper:7.2.6
-        restart: always
-        networks:
-            - brokers_network
-        environment:
-            ZOOKEEPER_CLIENT_PORT: 2181
-            ZOOKEEPER_TICK_TIME: 2000
-        ports:
-            - 2181:2181
-        volumes:
-            - ./kafka-data/zookeeper:/var/lib/zookeeper/data
-            - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
-    kafka:
-        image: confluentinc/cp-kafka:7.2.6
-        networks:
-            - brokers_network
-        depends_on:
-            - zookeeper
-        ports:
-            - 9092:9092
-            - 29092:29092
-        environment:
-            KAFKA_BROKER_ID: 1
-            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-            KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        volumes:
-            - ./kafka-data/kafka:/var/lib/kafka/data
+    # zookeeper:
+    #     image: confluentinc/cp-zookeeper:7.2.6
+    #     restart: always
+    #     networks:
+    #         - brokers_network
+    #     environment:
+    #         ZOOKEEPER_CLIENT_PORT: 2181
+    #         ZOOKEEPER_TICK_TIME: 2000
+    #     ports:
+    #         - 2181:2181
+    #     volumes:
+    #         - ./kafka-data/zookeeper:/var/lib/zookeeper/data
+    #         - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
+    # kafka:
+    #     image: confluentinc/cp-kafka:7.2.6
+    #     networks:
+    #         - brokers_network
+    #     depends_on:
+    #         - zookeeper
+    #     ports:
+    #         - 9092:9092
+    #         - 29092:29092
+    #     environment:
+    #         KAFKA_BROKER_ID: 1
+    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    #         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+    #         KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    #     volumes:
+    #         - ./kafka-data/kafka:/var/lib/kafka/data
     
-    kafdrop:
-        image: obsidiandynamics/kafdrop
-        restart: "no"
-        ports:
-            - "9000:9000"
-        environment:
-            KAFKA_BROKERCONNECT: "kafka:9092"
-        networks:
-            - brokers_network
+    # kafdrop:
+    #     image: obsidiandynamics/kafdrop
+    #     restart: "no"
+    #     ports:
+    #         - "9000:9000"
+    #     environment:
+    #         KAFKA_BROKERCONNECT: "kafka:9092"
+    #     networks:
+    #         - brokers_network
 
 
-    # backends
-    backend_api:
+    # microservices
+    microservice_api:
         restart: always
         build:
-            dockerfile: ./ecommerce/backend_api/Dockerfile
+            dockerfile: ./microservice_api/Dockerfile
         ports:
             - "8000:8000"
-        command: "python3 manage.py runserver 0.0.0.0:8000"
+        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
         volumes:
-            - ./ecommerce/backend_api:/api
+            - ./microservice_api:/api
         networks:
             - brokers_network
         environment:
@@ -70,57 +71,71 @@ services:
 
 
     # Postgres Databases
-    database_analytics:
-        build:
-            dockerfile: ./ecommerce/database_analytics/Dockerfile
-        restart: always
-        ports:
-            - '5432:${POSTGRES_PORT}'
-        networks:
-            - database_analytics_network
-        env_file:
-            - .env
-        volumes:
-            - ./data/database_analytics:/var/lib/database_analytics/data
-        environment:
-            POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-            POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-            POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-        healthcheck:
-            test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
-            interval: 10s
-            timeout: 3s
-            retries: 3
+    # database_analytics:
+    #     build:
+    #         dockerfile: ./ecommerce/database_analytics/Dockerfile
+    #     restart: always
+    #     ports:
+    #         - '5432:${POSTGRES_PORT}'
+    #     networks:
+    #         - database_analytics_network
+    #     env_file:
+    #         - .env
+    #     volumes:
+    #         - ./data/database_analytics:/var/lib/database_analytics/data
+    #     environment:
+    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+    #     healthcheck:
+    #         test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+    #         interval: 10s
+    #         timeout: 3s
+    #         retries: 3
 
 
 
 
-    backend_analytics:
-        restart: on-failure:10
-        build:
-            dockerfile: ./ecommerce/backend_analytics/Dockerfile
-            args:
-                POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-                POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-                POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-                POSTGRES_HOST: ${DATABASE_ANALYTICS_POSTGRES_HOST}
-        ports:
-            - "8001:8001"
-        env_file:
-            - .env
-        environment:
-            POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-            POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-            POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-            POSTGRES_HOST: database_analytics
-            POSTGRES_PORT: ${POSTGRES_PORT}
-            KAFKA_BROKERCONNECT: "kafka:9092"
-        networks:
-            - brokers_network
-            - database_analytics_network
-        depends_on:
-            database_analytics:
-                condition: service_healthy
+    # microservice_analytics:
+    #     restart: on-failure:10
+    #     build:
+    #         dockerfile: ./ecommerce/microservice_analytics/Dockerfile
+    #         args:
+    #             POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+    #             POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+    #             POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+    #             POSTGRES_HOST: ${DATABASE_ANALYTICS_POSTGRES_HOST}
+    #     ports:
+    #         - "8001:8001"
+    #     env_file:
+    #         - .env
+    #     environment:
+    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+    #         POSTGRES_HOST: database_analytics
+    #         POSTGRES_PORT: ${POSTGRES_PORT}
+    #         KAFKA_BROKERCONNECT: "kafka:9092"
+    #     networks:
+    #         - brokers_network
+    #         - database_analytics_network
+    #     depends_on:
+    #         database_analytics:
+    #             condition: service_healthy
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         # command: ["./ecommerce/backend_analytics/wait_for_it.sh", "database_analytics:5432", "--", "python", "create_db.py"]
     # database_users:
     #     build:
@@ -212,20 +227,21 @@ services:
 
     
     # # Database administrator
-    pgadmin:
-        image: dpage/pgadmin4
-        environment:
-            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-            PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-            PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
-        ports:
-            - "5050:${PGADMIN_LISTEN_PORT}"
-        volumes:
-            - ./data/pgadmin4:/var/lib/pgadmin4/data
-        networks:
-            - database_analytics_network
-        restart: unless-stopped
+    # pgadmin:
+    #     image: dpage/pgadmin4
+    #     container_name: postgres_main
+    #     environment:
+    #         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+    #         PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    #         PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+    #         # PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+    #     ports:
+    #         - "5050:${PGADMIN_LISTEN_PORT}"
+    #     volumes:
+    #         - ./data/pgadmin4:/var/lib/pgadmin4/data
+    #     networks:
+    #         - database_analytics_network
+    #     restart: unless-stopped
 
     
 networks:
