--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,47 +6,47 @@ x-kafkaBrokers: &kafkaBrokers "kafka-1:9092"
 
 services:
     # Brokers
-    # zookeeper:
-    #     image: confluentinc/cp-zookeeper:7.2.6
-    #     restart: always
-    #     networks:
-    #         - brokers_network
-    #     environment:
-    #         ZOOKEEPER_CLIENT_PORT: 2181
-    #         ZOOKEEPER_TICK_TIME: 2000
-    #     ports:
-    #         - 2181:2181
-    #     volumes:
-    #         - ./kafka-data/zookeeper:/var/lib/zookeeper/data
-    #         - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
-    # kafka:
-    #     image: confluentinc/cp-kafka:7.2.6
-    #     networks:
-    #         - brokers_network
-    #     depends_on:
-    #         - zookeeper
-    #     ports:
-    #         - 9092:9092
-    #         - 29092:29092
-    #     environment:
-    #         KAFKA_BROKER_ID: 1
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #     volumes:
-    #         - ./kafka-data/kafka:/var/lib/kafka/data
+    zookeeper:
+        image: confluentinc/cp-zookeeper:7.2.6
+        restart: always
+        networks:
+            - brokers_network
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+        ports:
+            - 2181:2181
+        volumes:
+            - ./kafka-data/zookeeper:/var/lib/zookeeper/data
+            - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
+    kafka:
+        image: confluentinc/cp-kafka:7.2.6
+        networks:
+            - brokers_network
+        depends_on:
+            - zookeeper
+        ports:
+            - 9092:9092
+            - 29092:29092
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+            KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+        volumes:
+            - ./kafka-data/kafka:/var/lib/kafka/data
     
-    # kafdrop:
-    #     image: obsidiandynamics/kafdrop
-    #     restart: "no"
-    #     ports:
-    #         - "9000:9000"
-    #     environment:
-    #         KAFKA_BROKERCONNECT: "kafka:9092"
-    #     networks:
-    #         - brokers_network
+    kafdrop:
+        image: obsidiandynamics/kafdrop
+        restart: "no"
+        ports:
+            - "9000:9000"
+        environment:
+            KAFKA_BROKERCONNECT: "kafka:9092"
+        networks:
+            - brokers_network
 
 
     # microservices
@@ -159,9 +159,9 @@ services:
     #         timeout: 5s
     #         retries: 10
     
-    # database_products:
+    # database_inventory:
     #     build:
-    #         dockerfile: ./ecommerce/database_products/Dockerfile
+    #         dockerfile: ./ecommerce/database_inventory/Dockerfile
     #     restart: always
     #     ports:
     #         - '5434:${POSTGRES_PORT}'
@@ -170,11 +170,11 @@ services:
     #     env_file:
     #         - .env
     #     volumes:
-    #         - ./data/database_products:/var/lib/database_products/data
+    #         - ./data/database_inventory:/var/lib/database_inventory/data
     #     environment:
-    #         POSTGRES_USER: ${DATABASE_PRODUCTS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_PRODUCTS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_PRODUCTS_POSTGRES_DATABASE_NAME}
+    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
+    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
+    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
     #     healthcheck:
     #         test: [“CMD-SHELL”, “pg_isready”]
     #         interval: 1s
@@ -225,23 +225,45 @@ services:
     #         timeout: 5s
     #         retries: 10
 
-    
-    # # Database administrator
-    # pgadmin:
-    #     image: dpage/pgadmin4
-    #     container_name: postgres_main
-    #     environment:
-    #         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-    #         PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    #         PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-    #         # PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+    # database_analytics:
+    #     build:
+    #         dockerfile: ./ecommerce/database_orders/Dockerfile
+    #     restart: always
     #     ports:
-    #         - "5050:${PGADMIN_LISTEN_PORT}"
-    #     volumes:
-    #         - ./data/pgadmin4:/var/lib/pgadmin4/data
+    #         - '5436:${POSTGRES_PORT}'
     #     networks:
-    #         - database_analytics_network
-    #     restart: unless-stopped
+    #         - database_network
+    #     env_file:
+    #         - .env
+    #     volumes:
+    #         - ./data/database_orders:/var/lib/database_orders/data
+    #     environment:
+    #         POSTGRES_USER: ${DATABASE_ORDERS_POSTGRES_USER}
+    #         POSTGRES_PASSWORD: ${DATABASE_ORDERS_POSTGRES_PASSWORD}
+    #         POSTGRES_DB: ${DATABASE_ORDERS_POSTGRES_DATABASE_NAME}
+    #     healthcheck:
+    #         test: [“CMD-SHELL”, “pg_isready”]
+    #         interval: 1s
+    #         timeout: 5s
+    #         retries: 10
+
+
+    # # Database administrator
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: postgres_main
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+            PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+            # PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+        ports:
+            - "5050:${PGADMIN_LISTEN_PORT}"
+        volumes:
+            - ./data/pgadmin4:/var/lib/pgadmin4/data
+        networks:
+            - database_analytics_network
+        restart: unless-stopped
 
     
 networks:
